[project]
name = "gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]
